--- a/src/app/agreement/agreement.component.html
+++ b/src/app/agreement/agreement.component.html
@@ -100,38 +100,47 @@
     <!--Sensor charts-->
     <div [hidden]="show_sensors == false">
       <div class="row">
+
+        <!--Temperature-->
         <div class="col-md-6">
-          <div class="alert" [ngClass]="{'alert-success': temperature_sensor_id !== null, 'alert-danger': temperature_sensor_id === null}">
-            <p><strong><span class="glyphicon glyphicon-dashboard"></span> Temperature</strong> {{temperature_sensor_id}}</p>
+          <div class="alert sensor-header" [ngClass]="{'alert-success': temperature_sensor_id !== null, 'alert-danger': temperature_sensor_id === null}">
+            <p><strong><span class="glyphicon glyphicon-dashboard"></span> Temperature</strong> <strong *ngIf="temperature_sensor_id === null">(not included)</strong> {{temperature_sensor_id}}</p>
           </div>
-          <div *ngIf="temperature_sensor_id !== null" id="tempChartDiv" [style.width.%]="100" [style.height.px]="400"></div>
-          <div *ngIf="temperature_sensor_id === null">No sensor included</div>
+          <div class="alert sensor-chart" *ngIf="temperature_sensor_id !== null">
+            <div id="tempChartDiv" [style.width.%]="100" [style.height.px]="400"></div>
+          </div>
         </div>
 
+        <!--Accelerometer-->
         <div class="col-md-6">
-          <div class="alert" [ngClass]="{'alert-success': accelerometer_sensor_id !== null, 'alert-danger': accelerometer_sensor_id === null}">
-            <p><strong><span class="glyphicon glyphicon-dashboard"></span> Accelerometer</strong> {{accelerometer_sensor_id}}</p>
+          <div class="alert sensor-header" [ngClass]="{'alert-success': accelerometer_sensor_id !== null, 'alert-danger': accelerometer_sensor_id === null}">
+            <p><strong><span class="glyphicon glyphicon-dashboard"></span> Accelerometer</strong> <strong *ngIf="accelerometer_sensor_id === null">(not included)</strong> {{accelerometer_sensor_id}}</p>
           </div>
-          <div *ngIf="accelerometer_sensor_id !== null" id="accChartDiv" [style.width.%]="100" [style.height.px]="400"></div>
-          <div *ngIf="accelerometer_sensor_id === null">No sensor included</div>
+          <div class="alert sensor-chart" *ngIf="accelerometer_sensor_id !== null">
+            <div id="accChartDiv" [style.width.%]="100" [style.height.px]="400"></div>
+          </div>
         </div>
       </div>
 
+      <!--Pressure sensor-->
       <div class="row">
         <div class="col-md-6">
-          <div class="alert" [ngClass]="{'alert-success': pressure_sensor_id !== null, 'alert-danger': pressure_sensor_id === null}">
-            <p><strong><span class="glyphicon glyphicon-dashboard"></span> Pressure</strong> {{pressure_sensor_id}}</p>
+          <div class="alert sensor-header" [ngClass]="{'alert-success': pressure_sensor_id !== null, 'alert-danger': pressure_sensor_id === null}">
+            <p><strong><span class="glyphicon glyphicon-dashboard"></span> Pressure</strong> <strong *ngIf="pressure_sensor_id === null">(not included)</strong> {{pressure_sensor_id}}</p>
           </div>
-          <div *ngIf="pressure_sensor_id !== null" id="pressChartDiv" [style.width.%]="100" [style.height.px]="400"></div>
-          <div *ngIf="pressure_sensor_id === null">No sensor included</div>
+          <div class="alert sensor-chart" *ngIf="pressure_sensor_id !== null">
+            <div id="pressChartDiv" [style.width.%]="100" [style.height.px]="400"></div>
+          </div>
         </div>
 
+        <!--Humidity sensor-->
         <div class="col-md-6">
-          <div class="alert" [ngClass]="{'alert-success': humidity_sensor_id !== null, 'alert-danger': humidity_sensor_id === null}">
-            <p><strong><span class="glyphicon glyphicon-dashboard"></span> Humidity</strong> {{humidity_sensor_id}}</p>
+          <div class="alert sensor-header" [ngClass]="{'alert-success': humidity_sensor_id !== null, 'alert-danger': humidity_sensor_id === null}">
+            <p><strong><span class="glyphicon glyphicon-dashboard"></span> Humidity</strong> <strong *ngIf="humidity_sensor_id === null">(not included)</strong> {{humidity_sensor_id}}</p>
           </div>
-          <div *ngIf="humidity_sensor_id !== null" id="humidityChartDiv" [style.width.%]="100" [style.height.px]="400"></div>
-          <div *ngIf="humidity_sensor_id === null">No sensor included</div>
+          <div class="alert sensor-chart" *ngIf="humidity_sensor_id !== null">
+            <div id="humidityChartDiv" [style.width.%]="100" [style.height.px]="400"></div>
+          </div>
         </div>
       </div>
     </div>
