--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,15 @@ agm-map {
   width:49.5%;
 }
 
+.sensor-chart {
+  margin-top: 0;
+  border-top: none;
+}
+
+.sensor-header {
+  margin-bottom: 0;
+}
+
 /*============================ItemComponent============================*/
 .disabled {
   background-color: grey;
